# gpui-text-input

./: Cargo.toml
doc/: design.md
src/: actions.rs  atom.rs  boundary.rs  change.rs  editing.rs  lib.rs  movement.rs  newline.rs  options.rs  state.rs
src/widget/: events.rs  geometry_api.rs  ime.rs  keyboard.rs  layout.rs  mod.rs  render.rs  theme.rs  utf16.rs
src/widget/layout/: geometry.rs  shape.rs
tests/: text_model.rs  widget.rs
