[workspace]
members = ["."]
resolver = "3"

[workspace.package]
edition = "2024"
license = "Apache-2.0"
rust-version = "1.92"
version = "0.1.0"

[workspace.dependencies]
gpui = { git = "https://github.com/berylorg/zed-fork.git", rev = "c70dbf5244396cea7e627a73ffdcf45f19c9642d", default-features = false, features = ["windows-manifest"] }
unicode-segmentation = "1.12.0"

[package]
name = "gpui-text-input"
edition.workspace = true
license.workspace = true
rust-version.workspace = true
version.workspace = true

[dependencies]
gpui.workspace = true
unicode-segmentation.workspace = true

[dev-dependencies]
gpui = { workspace = true, features = ["test-support"] }
